tests/snapshots/snapshot_tests__concrete_distributed_protocols_depth_5__sharded_key_value_store.snap
---
source: tests/snapshot_tests.rs
expression: result
---
VmtSnapshotResult {
    example_name: "examples/distributed_protocols/sharded_key_value_store/sharded_key_value_store.vmt",
    config: VmtSnapshotConfig {
        strategy: Concrete,
        solver: Z3,
        target_depth: 5,
    },
    outcome: BoundedSafe {
        solver_checks: 5,
    },
}
